# envoy_wasm_content_type

./: README.md  docker-compose.yaml
envoy_example/: config-2.yaml  config.yaml
mockserver/: initializer.json
wasm_filter/: Cargo.toml  compile.sh  rust-toolchain.toml
wasm_filter/src/: lib.rs
wasm_filter/src/context/: http_context.rs  mod.rs  root_context.rs
