[package]
name = "content_type"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
proxy-wasm = "0.1.4"

[lib]
crate-type = ["cdylib"]
name="content_type"
path= "src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
